ProjetInfoElec/grafcet/y.output
Grammar

    0 $accept: program_grafcet $end

    1 program_grafcet: liste_definitions

    2 liste_definitions: liste_definitions definition
    3                  | definition

    4 definition: definition_etape
    5           | definition_transition

    6 definition_etape: T_STEP T_VARIABLE '(' liste_actions ')'

    7 liste_actions: liste_actions ',' action
    8              | action

    9 action: T_VARIABLE '=' expr

   10 definition_transition: T_TRANSITION T_VARIABLE '(' liste_etapes ',' liste_etapes ',' receptivite ')'

   11 liste_etapes: '{' liste_etapes1 '}'

   12 liste_etapes1: liste_etapes1 ',' etape1
   13              | etape1

   14 etape1: T_VARIABLE

   15 receptivite: expr

   16 expr: T_NUMERIC
   17     | expr '+' expr
   18     | expr '-' expr
   19     | expr '*' expr
   20     | expr '/' expr
   21     | '(' expr ')'
   22     | expr '<' expr
   23     | expr '>' expr
   24     | expr T_GE expr
   25     | expr T_LE expr
   26     | expr T_NE expr
   27     | expr T_EQ expr
   28     | '!' expr
   29     | expr '.' expr
   30     | expr '|' expr
   31     | '-' expr
   32     | T_VARIABLE


Terminals, with rules where they appear

$end (0) 0
'!' (33) 28
'(' (40) 6 10 21
')' (41) 6 10 21
'*' (42) 19
'+' (43) 17
',' (44) 7 10 12
'-' (45) 18 31
'.' (46) 29
'/' (47) 20
'<' (60) 22
'=' (61) 9
'>' (62) 23
'{' (123) 11
'|' (124) 30
'}' (125) 11
error (256)
T_NE (258) 26
T_EQ (259) 27
T_LE (260) 25
T_GE (261) 24
T_UMINUS (262)
T_NNOT (263)
T_NUMERIC (264) 16
T_VARIABLE (265) 6 9 10 14 32
T_STEP (266) 6
T_TRANSITION (267) 10


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
program_grafcet (29)
    on left: 1, on right: 0
liste_definitions (30)
    on left: 2 3, on right: 1 2
definition (31)
    on left: 4 5, on right: 2 3
definition_etape (32)
    on left: 6, on right: 4
liste_actions (33)
    on left: 7 8, on right: 6 7
action (34)
    on left: 9, on right: 7 8
definition_transition (35)
    on left: 10, on right: 5
liste_etapes (36)
    on left: 11, on right: 10
liste_etapes1 (37)
    on left: 12 13, on right: 11 12
etape1 (38)
    on left: 14, on right: 12 13
receptivite (39)
    on left: 15, on right: 10
expr (40)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32,
    on right: 9 15 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31


state 0

    0 $accept: . program_grafcet $end

    T_STEP        shift, and go to state 1
    T_TRANSITION  shift, and go to state 2

    program_grafcet        go to state 3
    liste_definitions      go to state 4
    definition             go to state 5
    definition_etape       go to state 6
    definition_transition  go to state 7


state 1

    6 definition_etape: T_STEP . T_VARIABLE '(' liste_actions ')'

    T_VARIABLE  shift, and go to state 8


state 2

   10 definition_transition: T_TRANSITION . T_VARIABLE '(' liste_etapes ',' liste_etapes ',' receptivite ')'

    T_VARIABLE  shift, and go to state 9


state 3

    0 $accept: program_grafcet . $end

    $end  shift, and go to state 10


state 4

    1 program_grafcet: liste_definitions .
    2 liste_definitions: liste_definitions . definition

    T_STEP        shift, and go to state 1
    T_TRANSITION  shift, and go to state 2

    $default  reduce using rule 1 (program_grafcet)

    definition             go to state 11
    definition_etape       go to state 6
    definition_transition  go to state 7


state 5

    3 liste_definitions: definition .

    $default  reduce using rule 3 (liste_definitions)


state 6

    4 definition: definition_etape .

    $default  reduce using rule 4 (definition)


state 7

    5 definition: definition_transition .

    $default  reduce using rule 5 (definition)


state 8

    6 definition_etape: T_STEP T_VARIABLE . '(' liste_actions ')'

    '('  shift, and go to state 12


state 9

   10 definition_transition: T_TRANSITION T_VARIABLE . '(' liste_etapes ',' liste_etapes ',' receptivite ')'

    '('  shift, and go to state 13


state 10

    0 $accept: program_grafcet $end .

    $default  accept


state 11

    2 liste_definitions: liste_definitions definition .

    $default  reduce using rule 2 (liste_definitions)


state 12

    6 definition_etape: T_STEP T_VARIABLE '(' . liste_actions ')'

    T_VARIABLE  shift, and go to state 14

    liste_actions  go to state 15
    action         go to state 16


state 13

   10 definition_transition: T_TRANSITION T_VARIABLE '(' . liste_etapes ',' liste_etapes ',' receptivite ')'

    '{'  shift, and go to state 17

    liste_etapes  go to state 18


state 14

    9 action: T_VARIABLE . '=' expr

    '='  shift, and go to state 19


state 15

    6 definition_etape: T_STEP T_VARIABLE '(' liste_actions . ')'
    7 liste_actions: liste_actions . ',' action

    ')'  shift, and go to state 20
    ','  shift, and go to state 21


state 16

    8 liste_actions: action .

    $default  reduce using rule 8 (liste_actions)


state 17

   11 liste_etapes: '{' . liste_etapes1 '}'

    T_VARIABLE  shift, and go to state 22

    liste_etapes1  go to state 23
    etape1         go to state 24


state 18

   10 definition_transition: T_TRANSITION T_VARIABLE '(' liste_etapes . ',' liste_etapes ',' receptivite ')'

    ','  shift, and go to state 25


state 19

    9 action: T_VARIABLE '=' . expr

    '-'         shift, and go to state 26
    T_NUMERIC   shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    '('         shift, and go to state 29
    '!'         shift, and go to state 30

    expr  go to state 31


state 20

    6 definition_etape: T_STEP T_VARIABLE '(' liste_actions ')' .

    $default  reduce using rule 6 (definition_etape)


state 21

    7 liste_actions: liste_actions ',' . action

    T_VARIABLE  shift, and go to state 14

    action  go to state 32


state 22

   14 etape1: T_VARIABLE .

    $default  reduce using rule 14 (etape1)


state 23

   11 liste_etapes: '{' liste_etapes1 . '}'
   12 liste_etapes1: liste_etapes1 . ',' etape1

    ','  shift, and go to state 33
    '}'  shift, and go to state 34


state 24

   13 liste_etapes1: etape1 .

    $default  reduce using rule 13 (liste_etapes1)


state 25

   10 definition_transition: T_TRANSITION T_VARIABLE '(' liste_etapes ',' . liste_etapes ',' receptivite ')'

    '{'  shift, and go to state 17

    liste_etapes  go to state 35


state 26

   31 expr: '-' . expr

    '-'         shift, and go to state 26
    T_NUMERIC   shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    '('         shift, and go to state 29
    '!'         shift, and go to state 30

    expr  go to state 36


state 27

   16 expr: T_NUMERIC .

    $default  reduce using rule 16 (expr)


state 28

   32 expr: T_VARIABLE .

    $default  reduce using rule 32 (expr)


state 29

   21 expr: '(' . expr ')'

    '-'         shift, and go to state 26
    T_NUMERIC   shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    '('         shift, and go to state 29
    '!'         shift, and go to state 30

    expr  go to state 37


state 30

   28 expr: '!' . expr

    '-'         shift, and go to state 26
    T_NUMERIC   shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    '('         shift, and go to state 29
    '!'         shift, and go to state 30

    expr  go to state 38


state 31

    9 action: T_VARIABLE '=' expr .
   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . T_GE expr
   25     | expr . T_LE expr
   26     | expr . T_NE expr
   27     | expr . T_EQ expr
   29     | expr . '.' expr
   30     | expr . '|' expr

    '>'   shift, and go to state 39
    '<'   shift, and go to state 40
    T_NE  shift, and go to state 41
    T_EQ  shift, and go to state 42
    T_LE  shift, and go to state 43
    T_GE  shift, and go to state 44
    '+'   shift, and go to state 45
    '-'   shift, and go to state 46
    '|'   shift, and go to state 47
    '*'   shift, and go to state 48
    '/'   shift, and go to state 49
    '.'   shift, and go to state 50

    $default  reduce using rule 9 (action)


state 32

    7 liste_actions: liste_actions ',' action .

    $default  reduce using rule 7 (liste_actions)


state 33

   12 liste_etapes1: liste_etapes1 ',' . etape1

    T_VARIABLE  shift, and go to state 22

    etape1  go to state 51


state 34

   11 liste_etapes: '{' liste_etapes1 '}' .

    $default  reduce using rule 11 (liste_etapes)


state 35

   10 definition_transition: T_TRANSITION T_VARIABLE '(' liste_etapes ',' liste_etapes . ',' receptivite ')'

    ','  shift, and go to state 52


state 36

   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . T_GE expr
   25     | expr . T_LE expr
   26     | expr . T_NE expr
   27     | expr . T_EQ expr
   29     | expr . '.' expr
   30     | expr . '|' expr
   31     | '-' expr .

    $default  reduce using rule 31 (expr)


state 37

   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   21     | '(' expr . ')'
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . T_GE expr
   25     | expr . T_LE expr
   26     | expr . T_NE expr
   27     | expr . T_EQ expr
   29     | expr . '.' expr
   30     | expr . '|' expr

    '>'   shift, and go to state 39
    '<'   shift, and go to state 40
    T_NE  shift, and go to state 41
    T_EQ  shift, and go to state 42
    T_LE  shift, and go to state 43
    T_GE  shift, and go to state 44
    '+'   shift, and go to state 45
    '-'   shift, and go to state 46
    '|'   shift, and go to state 47
    '*'   shift, and go to state 48
    '/'   shift, and go to state 49
    '.'   shift, and go to state 50
    ')'   shift, and go to state 53


state 38

   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . T_GE expr
   25     | expr . T_LE expr
   26     | expr . T_NE expr
   27     | expr . T_EQ expr
   28     | '!' expr .
   29     | expr . '.' expr
   30     | expr . '|' expr

    $default  reduce using rule 28 (expr)


state 39

   23 expr: expr '>' . expr

    '-'         shift, and go to state 26
    T_NUMERIC   shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    '('         shift, and go to state 29
    '!'         shift, and go to state 30

    expr  go to state 54


state 40

   22 expr: expr '<' . expr

    '-'         shift, and go to state 26
    T_NUMERIC   shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    '('         shift, and go to state 29
    '!'         shift, and go to state 30

    expr  go to state 55


state 41

   26 expr: expr T_NE . expr

    '-'         shift, and go to state 26
    T_NUMERIC   shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    '('         shift, and go to state 29
    '!'         shift, and go to state 30

    expr  go to state 56


state 42

   27 expr: expr T_EQ . expr

    '-'         shift, and go to state 26
    T_NUMERIC   shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    '('         shift, and go to state 29
    '!'         shift, and go to state 30

    expr  go to state 57


state 43

   25 expr: expr T_LE . expr

    '-'         shift, and go to state 26
    T_NUMERIC   shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    '('         shift, and go to state 29
    '!'         shift, and go to state 30

    expr  go to state 58


state 44

   24 expr: expr T_GE . expr

    '-'         shift, and go to state 26
    T_NUMERIC   shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    '('         shift, and go to state 29
    '!'         shift, and go to state 30

    expr  go to state 59


state 45

   17 expr: expr '+' . expr

    '-'         shift, and go to state 26
    T_NUMERIC   shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    '('         shift, and go to state 29
    '!'         shift, and go to state 30

    expr  go to state 60


state 46

   18 expr: expr '-' . expr

    '-'         shift, and go to state 26
    T_NUMERIC   shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    '('         shift, and go to state 29
    '!'         shift, and go to state 30

    expr  go to state 61


state 47

   30 expr: expr '|' . expr

    '-'         shift, and go to state 26
    T_NUMERIC   shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    '('         shift, and go to state 29
    '!'         shift, and go to state 30

    expr  go to state 62


state 48

   19 expr: expr '*' . expr

    '-'         shift, and go to state 26
    T_NUMERIC   shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    '('         shift, and go to state 29
    '!'         shift, and go to state 30

    expr  go to state 63


state 49

   20 expr: expr '/' . expr

    '-'         shift, and go to state 26
    T_NUMERIC   shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    '('         shift, and go to state 29
    '!'         shift, and go to state 30

    expr  go to state 64


state 50

   29 expr: expr '.' . expr

    '-'         shift, and go to state 26
    T_NUMERIC   shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    '('         shift, and go to state 29
    '!'         shift, and go to state 30

    expr  go to state 65


state 51

   12 liste_etapes1: liste_etapes1 ',' etape1 .

    $default  reduce using rule 12 (liste_etapes1)


state 52

   10 definition_transition: T_TRANSITION T_VARIABLE '(' liste_etapes ',' liste_etapes ',' . receptivite ')'

    '-'         shift, and go to state 26
    T_NUMERIC   shift, and go to state 27
    T_VARIABLE  shift, and go to state 28
    '('         shift, and go to state 29
    '!'         shift, and go to state 30

    receptivite  go to state 66
    expr         go to state 67


state 53

   21 expr: '(' expr ')' .

    $default  reduce using rule 21 (expr)


state 54

   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   23     | expr '>' expr .
   24     | expr . T_GE expr
   25     | expr . T_LE expr
   26     | expr . T_NE expr
   27     | expr . T_EQ expr
   29     | expr . '.' expr
   30     | expr . '|' expr

    '+'  shift, and go to state 45
    '-'  shift, and go to state 46
    '|'  shift, and go to state 47
    '*'  shift, and go to state 48
    '/'  shift, and go to state 49
    '.'  shift, and go to state 50

    $default  reduce using rule 23 (expr)


state 55

   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   22     | expr . '<' expr
   22     | expr '<' expr .
   23     | expr . '>' expr
   24     | expr . T_GE expr
   25     | expr . T_LE expr
   26     | expr . T_NE expr
   27     | expr . T_EQ expr
   29     | expr . '.' expr
   30     | expr . '|' expr

    '+'  shift, and go to state 45
    '-'  shift, and go to state 46
    '|'  shift, and go to state 47
    '*'  shift, and go to state 48
    '/'  shift, and go to state 49
    '.'  shift, and go to state 50

    $default  reduce using rule 22 (expr)


state 56

   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . T_GE expr
   25     | expr . T_LE expr
   26     | expr . T_NE expr
   26     | expr T_NE expr .
   27     | expr . T_EQ expr
   29     | expr . '.' expr
   30     | expr . '|' expr

    '+'  shift, and go to state 45
    '-'  shift, and go to state 46
    '|'  shift, and go to state 47
    '*'  shift, and go to state 48
    '/'  shift, and go to state 49
    '.'  shift, and go to state 50

    $default  reduce using rule 26 (expr)


state 57

   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . T_GE expr
   25     | expr . T_LE expr
   26     | expr . T_NE expr
   27     | expr . T_EQ expr
   27     | expr T_EQ expr .
   29     | expr . '.' expr
   30     | expr . '|' expr

    '+'  shift, and go to state 45
    '-'  shift, and go to state 46
    '|'  shift, and go to state 47
    '*'  shift, and go to state 48
    '/'  shift, and go to state 49
    '.'  shift, and go to state 50

    $default  reduce using rule 27 (expr)


state 58

   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . T_GE expr
   25     | expr . T_LE expr
   25     | expr T_LE expr .
   26     | expr . T_NE expr
   27     | expr . T_EQ expr
   29     | expr . '.' expr
   30     | expr . '|' expr

    '+'  shift, and go to state 45
    '-'  shift, and go to state 46
    '|'  shift, and go to state 47
    '*'  shift, and go to state 48
    '/'  shift, and go to state 49
    '.'  shift, and go to state 50

    $default  reduce using rule 25 (expr)


state 59

   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . T_GE expr
   24     | expr T_GE expr .
   25     | expr . T_LE expr
   26     | expr . T_NE expr
   27     | expr . T_EQ expr
   29     | expr . '.' expr
   30     | expr . '|' expr

    '+'  shift, and go to state 45
    '-'  shift, and go to state 46
    '|'  shift, and go to state 47
    '*'  shift, and go to state 48
    '/'  shift, and go to state 49
    '.'  shift, and go to state 50

    $default  reduce using rule 24 (expr)


state 60

   17 expr: expr . '+' expr
   17     | expr '+' expr .
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . T_GE expr
   25     | expr . T_LE expr
   26     | expr . T_NE expr
   27     | expr . T_EQ expr
   29     | expr . '.' expr
   30     | expr . '|' expr

    '*'  shift, and go to state 48
    '/'  shift, and go to state 49
    '.'  shift, and go to state 50

    $default  reduce using rule 17 (expr)


state 61

   17 expr: expr . '+' expr
   18     | expr . '-' expr
   18     | expr '-' expr .
   19     | expr . '*' expr
   20     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . T_GE expr
   25     | expr . T_LE expr
   26     | expr . T_NE expr
   27     | expr . T_EQ expr
   29     | expr . '.' expr
   30     | expr . '|' expr

    '*'  shift, and go to state 48
    '/'  shift, and go to state 49
    '.'  shift, and go to state 50

    $default  reduce using rule 18 (expr)


state 62

   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . T_GE expr
   25     | expr . T_LE expr
   26     | expr . T_NE expr
   27     | expr . T_EQ expr
   29     | expr . '.' expr
   30     | expr . '|' expr
   30     | expr '|' expr .

    '*'  shift, and go to state 48
    '/'  shift, and go to state 49
    '.'  shift, and go to state 50

    $default  reduce using rule 30 (expr)


state 63

   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   19     | expr '*' expr .
   20     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . T_GE expr
   25     | expr . T_LE expr
   26     | expr . T_NE expr
   27     | expr . T_EQ expr
   29     | expr . '.' expr
   30     | expr . '|' expr

    $default  reduce using rule 19 (expr)


state 64

   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   20     | expr '/' expr .
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . T_GE expr
   25     | expr . T_LE expr
   26     | expr . T_NE expr
   27     | expr . T_EQ expr
   29     | expr . '.' expr
   30     | expr . '|' expr

    $default  reduce using rule 20 (expr)


state 65

   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . T_GE expr
   25     | expr . T_LE expr
   26     | expr . T_NE expr
   27     | expr . T_EQ expr
   29     | expr . '.' expr
   29     | expr '.' expr .
   30     | expr . '|' expr

    $default  reduce using rule 29 (expr)


state 66

   10 definition_transition: T_TRANSITION T_VARIABLE '(' liste_etapes ',' liste_etapes ',' receptivite . ')'

    ')'  shift, and go to state 68


state 67

   15 receptivite: expr .
   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . T_GE expr
   25     | expr . T_LE expr
   26     | expr . T_NE expr
   27     | expr . T_EQ expr
   29     | expr . '.' expr
   30     | expr . '|' expr

    '>'   shift, and go to state 39
    '<'   shift, and go to state 40
    T_NE  shift, and go to state 41
    T_EQ  shift, and go to state 42
    T_LE  shift, and go to state 43
    T_GE  shift, and go to state 44
    '+'   shift, and go to state 45
    '-'   shift, and go to state 46
    '|'   shift, and go to state 47
    '*'   shift, and go to state 48
    '/'   shift, and go to state 49
    '.'   shift, and go to state 50

    $default  reduce using rule 15 (receptivite)


state 68

   10 definition_transition: T_TRANSITION T_VARIABLE '(' liste_etapes ',' liste_etapes ',' receptivite ')' .

    $default  reduce using rule 10 (definition_transition)
